# building-with-claude

./: .gitignore  Building with Claude - Exit Assessment.docx  SETUP.md
day1/: credit_policy_assistant.py  lab1.md  lab2.md  secure_call.py  starter.py
day2/: lab3.md  lab4.md  loan_application_extractor.py  loan_intake_manager.py  loan_intake_manager_interactive.py  starter.py
day3/: invoice_tool_agent.py  invoice_tool_agent_beta.py  lab5.md  lab6_part1.md  rag_pipeline.py
day4/: eval_rag_assistant.py  lab6_part2.md  lab7.md  rag_assistant.py
guides/: module-01-api-setup-and-secure-integration.md  module-02-prompt-engineering-for-applications.md  module-03-structured-outputs-and-validation.md  module-04-conversation-and-context-management.md  module-05-tool-use-and-function-integration.md  module-06-retrieval-grounded-responses.md  module-07-evaluation-and-output-quality.md
labs/module-01/: 01-tokenization-and-generation.html  02-secure-request-flow.html  03-error-handling-and-cost.html
labs/module-01/demos/: README.md
labs/module-01/demos/01-secure-hello/: README.md  pyproject.toml  secure_hello.py
labs/module-01/demos/02-token-cost-explorer/: README.md  pyproject.toml  token_cost_explorer.py
labs/module-01/demos/03-error-handling-lab/: .env.example  README.md  error_handling_lab.py  pyproject.toml
labs/module-02/: 01-instruction-hierarchy.html  02-grounding-and-fallback.html  03-long-context-and-caching.html
labs/module-02/demos/: README.md
labs/module-02/demos/01-prompt-layers/: README.md  prompt_layers.py  pyproject.toml
labs/module-02/demos/02-grounding-eval/: .env.example  README.md  grounding_eval.py  pyproject.toml
labs/module-02/demos/03-context-and-caching/: .env.example  README.md  context_and_caching.py  pyproject.toml
labs/module-03/: 01-schema-anatomy.html  02-validation-retry-loop.html  03-freeform-vs-schema.html
labs/module-03/demos/: README.md
labs/module-03/demos/01-schema-vs-freeform/: README.md  pyproject.toml  schema_vs_freeform.py
labs/module-03/demos/02-validation-retry/: README.md  pyproject.toml  validation_retry.py
labs/module-03/demos/03-downstream-integration/: README.md  downstream_integration.py  pyproject.toml
labs/module-04/: 01-stateless-vs-stateful.html  02-token-growth-and-summarization.html  03-message-anatomy.html
labs/module-04/demos/: README.md
labs/module-04/demos/01-stateless-memory/: .env.example  README.md  pyproject.toml  stateless_memory.py
labs/module-04/demos/02-token-aware-summarization/: README.md  pyproject.toml  token_aware_summarization.py
labs/module-04/demos/03-downstream-summary-integration/: README.md  downstream_summary_integration.py  pyproject.toml
labs/module-04/demos/04-server-side-compaction/: .env.example  README.md  pyproject.toml  server_side_compaction.py
labs/module-05/: 01-tool-schema-anatomy.html  02-agentic-loop-trace.html  03-manual-vs-tool-runner.html
labs/module-05/demos/: README.md
labs/module-05/demos/01-tool-schema-design/: README.md  pyproject.toml  tool_schema_design.py
labs/module-05/demos/02-manual-agentic-loop/: README.md  manual_agentic_loop.py  pyproject.toml
labs/module-05/demos/03-tool-runner-beta/: README.md  pyproject.toml  tool_runner_beta.py
labs/module-06/: 01-chunking-and-embedding-space.html  02-vector-store-query-trace.html  03-grounded-answer-and-citations.html
labs/module-06/demos/: README.md
labs/module-06/demos/01-chunking-and-embeddings/: README.md  chunking_and_embeddings.py  pyproject.toml
labs/module-06/demos/02-chroma-vector-store/: .env.example  README.md  chroma_vector_store.py  pyproject.toml
labs/module-06/demos/03-grounded-rag-query/: .env.example  README.md  grounded_rag_query.py  pyproject.toml
labs/module-07/: 01-faithfulness-judge-anatomy.html  02-eval-dimensions-comparison.html  03-prompt-versioning-and-feedback-loop.html
labs/module-07/demos/: README.md
labs/module-07/demos/01-faithfulness-judge/: .env.example  README.md  faithfulness_judge.py  pyproject.toml
labs/module-07/demos/02-eval-rubric-scorecard/: README.md  eval_rubric_scorecard.py  pyproject.toml
labs/module-07/demos/03-prompt-version-regression/: README.md  prompt_version_regression.py  pyproject.toml
shared/: .env.example  requirements.txt
shared/data/: apex_bank_invoices.md  apex_bank_loan_applications.md  apex_bank_vendor_master.md
shared/data/retail_products/: product_catalogue.md  vendor_specs.md
