[project]
name = "error-handling-lab"
version = "0.1.0"
description = "Module 1 demo — the four typed Anthropic SDK exceptions and their handlers (based on day1/secure_call.py, Part 5)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]
