[project]
name = "prompt-layers"
version = "0.1.0"
description = "Module 2 demo — builds a system prompt layer by layer (role, +constraints, +format, +example) to show instruction hierarchy and few-shot consistency (based on day1/credit_policy_assistant.py)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "python-dotenv>=1.2.2",
]
