[project]
name = "context-and-caching"
version = "0.1.0"
description = "Module 2 demo — token budgeting with count_tokens() and prompt caching (cache_control ephemeral) over a repeatedly-injected policy document (based on day1/credit_policy_assistant.py)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "python-dotenv>=1.2.2",
]
