[project]
name = "validation-retry"
version = "0.1.0"
description = "Module 3 demo — exercises the validation retry loop against a genuinely incomplete loan application to show retries fix model mistakes, not missing source data (based on day2/loan_application_extractor.py)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.7",
]
