[project]
name = "grounded-rag-query"
version = "0.1.0"
description = "Module 6 demo — full retrieval + grounded answer synthesis + citations + a tunable retrieval check (based on day4/rag_assistant.py)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69,<1.0",
    "openai>=1.30",
    "chromadb>=0.5",
    "python-dotenv>=1.0",
]
