[project]
name = "eval-rubric-scorecard"
version = "0.1.0"
description = "Module 7 demo — faithfulness, relevance, and safety scored across four fixed cases, each failing exactly one dimension (based on day4/eval_rag_assistant.py)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69,<1.0",
    "python-dotenv>=1.0",
]
